fixed the color of the light and dark modes toggle so it's visible.

--- a/src/assets/styles/components/navbar.css
+++ b/src/assets/styles/components/navbar.css
@@ -16,7 +16,7 @@ nav {
         }
 
         .nav-links {
-            @apply hidden absolute top-full left-0 w-full bg-foreground text-background flex-col items-center gap-4 p-4;
+            @apply hidden absolute top-full left-0 w-full bg-dark-background text-dark-foreground flex-col items-center gap-4 p-4;
             @apply lg:static lg:flex lg:w-auto lg:flex-row lg:gap-8 lg:p-0 lg:bg-transparent;
 
             a {
@@ -36,7 +36,7 @@ nav {
                     @apply p-2;
                     
                     svg {
-                        @apply w-5 h-5 stroke-foreground;
+                        @apply w-5 h-5 stroke-white lg:stroke-foreground;
                     }
                 }
                 
